# TCIntercom

./: .gitignore  Makefile  Procfile  README.md  heroku.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: main.yml
app/: Dockerfile  kare.py  logs.py  main.py  requirements.txt
tcintercom/: Dockerfile  main.py  requirements.txt  run.py
tcintercom/app/: _mark_duplicate.py  cron_job.py  kare.py  logs.py  main.py  mark_duplicate.py  settings.py  views.py  worker.py
tcintercom/app/routers/: views.py  worker.py
tcintercom/app2/: main.py  mark_duplicate.py  views.py  worker.py
tcsupport/: Dockerfile  requirements.txt  run.py
tcsupport/app/: logs.py  main.py  settings.py  views.py  worker.py
tcsupport/help_feedback/: github.py  views.py
tcsupport/tc_intercom/: kare.py  views.py
tests/: conftest.py  mock_github.py  requirements.test.txt  requirements.txt  test_help_feedback.py  test_kare_update.py  test_main.py  test_workers.py
