[project]
name = 'tcintercom'
version = '2.1.0'
description = "TutorCruncher's service for managing Intercom"
readme = 'README.md'
requires-python = '>=3.13'
dependencies = [
    'arq>=0.27.0',
    'fastapi>=0.128.0',
    'httpx>=0.28.1',
    'logfire[fastapi]>=4.21.0',
    'pydantic>=2.12.5',
    'pydantic-settings>=2.12.0',
    'redis>=5.3.1',
    'requests>=2.32.5',
    'sentry-sdk[fastapi]>=2.51.0',
    'uvicorn>=0.40.0',
]

[dependency-groups]
dev = [
    'coverage>=7.13.2',
    'devtools>=0.12.2',
    'pytest>=9.0.2',
    'pytest-asyncio>=1.3.0',
    'ruff>=0.14.14',
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ['I']
ignore = ['E402']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.coverage.run]
omit = [
    'tests/*',
    'migrations/*',
    'helpers.py',
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'def __str__',
    'raise NotImplementedError',
    'raise NotImplemented',
    'print',
    'if TYPE_CHECKING',
    "if __name__ == '__main__':",
]

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.logfire]
ignore_no_config = true
